--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", 
 xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
 
 # Moonbeam
+pallet-asset-manager = { git = "https://github.com/purestake/moonbeam", rev = "62ddcf21694c5c6875788acfc309cccf0cc857bd" }
 pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40" }
 pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40" }
 
@@ -71,7 +72,10 @@ sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkad
 cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
 cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
 parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
+[patch."https://github.com/purestake/polkadot"]
+xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
 
+# Patch Tellor
 [patch."https://github.com/tellor-io/tellor-pallet"]
 tellor-runtime-api = { path = "../tellor-pallet/runtime-api"}
 tellor = { path = "../tellor-pallet"}
