--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ frame-support = { git = "https://github.com/paritytech/substrate", branch = "pol
 frame-support-procedural = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
