--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ using-tellor = { git = "https://github.com/tellor-io/using-tellor-pallet" }
 rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
 statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
 moonbeam-runtime = { git = "https://github.com/purestake/moonbeam", rev = "a3e40a9ff4082e278297a4dee3f6a51bab3f6ed1" }
-oracle-consumer-runtime = { package = "parachain-template-runtime", git = "https://github.com/tellor-io/substrate-parachain-node" }
+oracle-consumer-runtime = { package = "parachain-template-runtime", git = "https://github.com/tellor-io/substrate-parachain-node", features = ["moonbeam"] }
 
 # Patch Moonbeam
 [patch."https://github.com/purestake/substrate"]
@@ -80,7 +80,5 @@ parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polk
 xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
 
 # Patch Tellor
-[patch."https://github.com/tellor-io/tellor-pallet"]
-tellor = { path = "../tellor-pallet" }
 [patch."https://github.com/tellor-io/substrate-parachain-node"]
 parachain-template-runtime = { path = "../substrate-parachain-node/runtime" }
