ci: free disk space

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,13 @@ jobs:
       - name: Set-Up
         run: sudo apt update && sudo apt install -y git clang curl libssl-dev llvm libudev-dev cmake protobuf-compiler
 
+      - name: Free space
+        run: | 
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+
       - name: Cache Build artefacts
         uses: Swatinem/rust-cache@v2.7.0
         with:
@@ -25,11 +32,12 @@ jobs:
       - name: Install cargo-nextest
         run: if ! which cargo-nextest &> /dev/null; then cargo install cargo-nextest; fi
 
-      # Pallet
       - name: Configure CI
         run: mkdir .config && echo -e "[profile.ci.junit]\npath = \"junit.xml\"" > .config/nextest.toml
+
       - name: Run tests
         run: cargo nextest run --release --profile ci
+
       - name: Report pallet test results
         uses: dorny/test-reporter@v1
         with:
