--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     permissions:
-      contents: write
+      checks: write
 
     steps:
       - uses: actions/checkout@v3
